testing/tests/ui/lit_on_assignment_lhs.stderr
error: literals are not allowed on the left-hand side of an assignment
 --> MyTemplate.txt:1:2
       "let 7=x%}"
 --> tests/ui/lit_on_assignment_lhs.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
